--- a/SomaProject/res/layout/fragment_search_by_event.xml
+++ b/SomaProject/res/layout/fragment_search_by_event.xml
@@ -16,7 +16,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
-            android:textSize="12dp"
+            android:textSize="12dp"	
             android:hint="회사명 또는 종목코드"
             android:ems="10" />
 
@@ -28,11 +28,19 @@
             android:layout_marginRight="20dp"/>
 
     </LinearLayout>
-
+	
+	<View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="#FFF0F0F0" />
+    
     <ListView
         android:id="@+id/lvSearchByEvent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:dividerHeight="1dp"
+        android:divider="#FFF0F0F0" >
     </ListView>
 
 </LinearLayout>
